fixing jumpy video cover

--- a/styles/scss/projectPages/_projectPages.module.scss
+++ b/styles/scss/projectPages/_projectPages.module.scss
@@ -84,7 +84,6 @@
             }
             .videoCover{
                 visibility: hidden;
-                width: inherit;
             }
         }
         .video{
